Add serial port example
Add an example connecting to a serial port and writing a message. This
is tested by creating a virtual serial port with the output written to
file.

Bazel test interaction with the filesystem prevents creation of a RW
device. As a result, `//test:virtual_serial_port_test` is defined as a
`sh_binary` that can be run with:

  bazel run //test:virtual_serial_port_test

Change-Id: I1be9cb2e8b13fa972084d66fa2c6ddffb23ae3cc

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -113,6 +113,27 @@ register_toolchains(
     "@gcc_12_toolchain//:toolchain",
 )
 
+ASIO_VERSION = "d6b95c0188e0359a8cdbdb6571f0cbacf11a538c"
+
+http_archive(
+    name = "asio",
+    build_file_content = """
+load("@rules_cc//cc:defs.bzl", "cc_library")
+
+cc_library(
+    name = "asio",
+    hdrs = glob(["asio/include/**"]),
+    includes = ["asio/include"],
+    defines = [
+    ],
+    visibility = ["//visibility:public"],
+)
+""",
+    sha256 = "c4eae0910b8fcf2df8d32dc0ab67b032e9876491a5968faad32d330fd41e119c",
+    strip_prefix = "asio-%s" % ASIO_VERSION,
+    url = "https://github.com/chriskohlhoff/asio/archive/%s.tar.gz" % ASIO_VERSION,
+)
+
 FMT_VERSION = "dd5a9691f992f7f257243cbecb516a4ab584dcde"
 
 http_archive(
