Move high and low pass filters to `//filter:filter` lib
Add a `//filter:filter` library with strongly typed high pass and low
pass filters.

Change-Id: I1ff1848c4d51e108b8deaf900a6dd02e4782db0c

--- a/filter/BUILD.bazel
+++ b/filter/BUILD.bazel
@@ -1,8 +1,8 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
-    name = "complementary_filter",
-    hdrs = ["complementary_filter.hpp"],
+    name = "filter",
+    hdrs = ["filter.hpp"],
     visibility = ["//:__subpackages__"],
     deps = ["@mp_units"],
 )
