Add toolchain support for `linux-aarch64` host platform
Download hermetic LLVM toolchain when host is linux-aarch64. This
platform uses 16.03 as the 16.04 release is not available.

Change-Id: Ic34b0245183901c327340d2848e0202b5153cc84

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -98,7 +98,10 @@ llvm_toolchain(
         "": ["-fsanitize-link-c++-runtime"],
     },
     linux_x86_64_sysroot = "@gcc_12_toolchain_files//x86_64-buildroot-linux-gnu/sysroot",
-    llvm_version = "16.0.4",
+    llvm_versions = {
+        "": "16.0.4",
+        "linux-aarch64": "16.0.3",
+    },
 )
 
 # register llvm first, it has better error messages
