Add VESC example program
Define example program `//examples:vesc_cmd` that sends a 1.0F current
reference to a motor controller connected to `/dev/ttyS0`. This program
is implicitly constrained to the Raspberry Pi via the dependencies of
`//third_party/vesc_uart`.

Change-Id: I8cbf7d674e1f47d2e0ebce7f795a1b5d353f918e

--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -38,6 +38,14 @@ config_setting(
     ],
 )
 
+# With GCC and tsan:
+# error: 'atomic_thread_fence' is not supported with '-fsanitize=thread' [-Werror=tsan]
+config_setting(
+    name = "gcc_tsan",
+    flag_values = {"@bazel_tools//tools/cpp:compiler": "gcc"},
+    values = {"features": "tsan"},
+)
+
 alias(
     name = "clang16",
     actual = select({
