--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -1,18 +1,10 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
 
-# With GCC and tsan:
-# error: 'atomic_thread_fence' is not supported with '-fsanitize=thread' [-Werror=tsan]
-config_setting(
-    name = "gcc_tsan",
-    flag_values = {"@bazel_tools//tools/cpp:compiler": "gcc"},
-    values = {"features": "tsan"},
-)
-
 cc_binary(
     name = "serial_test",
     srcs = ["serial_test.cpp"],
     target_compatible_with = select({
-        ":gcc_tsan": ["@platforms//:incompatible"],
+        "//toolchain:gcc_tsan": ["@platforms//:incompatible"],
         "//conditions:default": [],
     }),
     deps = [
