--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -38,7 +38,7 @@ host_system_libraries(
 load("@host_system_libraries//:defs.bzl", "HOST_SYSTEM_LIBRARIES")
 
 new_local_repository(
-    name = "linux-x86_64_usr_i2c",
+    name = "linux_x86-64_usr_i2c",
     build_file_content = """
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
@@ -48,10 +48,9 @@ cc_library(
 )
 
 cc_library(
-    name = "linux-x86_64_usr_i2c",
+    name = "linux_x86-64_usr_i2c",
     hdrs = ["include/i2c/smbus.h"],
     includes = ["include"],
-    linkopts = ["-li2c"],
     visibility = ["//visibility:public"],
     deps = [":i2c"],
 )
