Move LSM9DS1 code into a library
Change-Id: I9465f9cf7e2b074b6dfb677f00719c3bdea955ba

--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -10,7 +10,7 @@ cc_binary(
     name = "i2c",
     srcs = ["i2c.cpp"],
     deps = [
-        "//system:libi2c-dev",
+        "//LSM9DS1_MEMS",
         "@fmt",
     ],
 )
