--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -360,3 +360,37 @@ http_archive(
 load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")
 
 hedron_compile_commands_setup()
+
+http_archive(
+    name = "rules_python",
+    sha256 = "0a8003b044294d7840ac7d9d73eef05d6ceb682d7516781a4ec62eeb34702578",
+    strip_prefix = "rules_python-0.24.0",
+    url = "https://github.com/bazelbuild/rules_python/releases/download/0.24.0/rules_python-0.24.0.tar.gz",
+)
+
+#load("@rules_python//python:repositories.bzl", "py_repositories")
+#
+#py_repositories()
+
+load("@rules_python//python:repositories.bzl", "python_register_toolchains")
+
+python_register_toolchains(
+    name = "python3_10",
+    python_version = "3.10",
+)
+
+load("@rules_python//python/pip_install:repositories.bzl", "pip_install_dependencies")
+pip_install_dependencies()
+
+load("@rules_python//python:pip.bzl", "pip_parse")
+load("@python3_10//:defs.bzl", "interpreter")
+
+pip_parse(
+    name = "pip",
+    python_interpreter_target = interpreter,
+    requirements = "//python:requirements.txt",
+)
+
+load("@pip//:requirements.bzl", "install_deps")
+
+install_deps()
