Read rpm from VESC motor controller
Change-Id: Ib77a86f8add56258118e3e8662a90f9bba5137c1

--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -3,7 +3,11 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 cc_binary(
     name = "vesc_cmd",
     srcs = ["vesc_cmd.cpp"],
-    deps = ["//third_party/vesc_uart"],
+    deps = [
+        "//third_party/vesc_uart",
+        "//third_party/vesc_uart:extra",
+        "@fmt",
+    ],
 )
 
 cc_binary(
