--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -3,7 +3,10 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 cc_binary(
     name = "vesc_cmd",
     srcs = ["vesc_cmd.cpp"],
-    deps = ["//third_party/vesc_uart"],
+    deps = [
+        "//third_party/vesc_uart",
+        "@fmt",
+    ],
 )
 
 cc_binary(
